<resources>
    <string name="app_name">TaskManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tasks">Tasks</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Polski</item>
        <item>Українська</item>
    </string-array>
    <string-array name="task_categories">
        <item>All</item>
        <item>Urgent</item>
        <item>Personal</item>
        <item>Work</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>pl</item>
        <item>uk</item>
    </string-array>
</resources>