<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_reward"
            android:icon="@drawable/tasksicon"
            android:title="@string/create"
            android:visible="false" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/tasksicon"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/rewardsicon"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingsicon"
            android:title="@string/settings" />
    </group>
</menu>